<androidx.cardview.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardBackgroundColor="#EEF1F3"
    app:cardCornerRadius="25dp"
    app:contentPadding="5dp"
    app:cardElevation="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/imgLugar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/todos" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tituloLugar"
            android:layout_toRightOf="@+id/cardImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/lugar_turistico"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descripcionLugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tituloLugar"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/cardImg"
            android:text="@string/descripcion_de_mi_lugar_turistico_el_cual_se_va_a_investigar"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <RatingBar
            android:id="@+id/puntuacion"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:numStars="5"
            android:isIndicator="true"
            android:rating="3"
            android:progressTint="#FFC107"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/descripcionLugar"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>